--- a/static/sass/_menu.sass
+++ b/static/sass/_menu.sass
@@ -14,26 +14,28 @@
   @include transition-ease
 
   .title
-    position: fixed
-    bottom: 0
+    position: absolute
+    top: 50%
     left: 2rem
     font-family: 'Playball', cursive
     font-size: 2rem
     font-weight: normal
-    padding: 1rem
     color: $primary-color
+    transform: translateY(-50%)
     @include transition-ease
 
     &:hover
       text-shadow: 0 0 1px white
 
   .navbar
+    position: relative
+    top: 50%
     display: flex
     justify-content: center
     list-style: none
-    padding: 2rem
     text-align: right
     font-family: 'Roboto', serif
+    transform: translateY(-50%)
 
     &__item
       font-size: 1.1rem
